@@ -11,5 +11,6 @@ export(dsrwon)
 export(elim)
 export(encode)
 export(initsing)
+export(inters)
 export(nameRows)
 export(plautrans)
