@@ -1,27 +1,38 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/inters.R
 \name{inters}
 \alias{inters}
-\title{Intersection of two groups of propositions}
+\title{Intersection of two tables of propositions}
 \usage{
-  inters(x, y)
+inters(x, y)
 }
 \arguments{
-  \item{x}{A matrix of M focal elements defined on a frame of K elements.}
-   \item{y}{A matrix of N focal elements defined on a frame of K elements.}
-}
-\description{
-The intersection of of the M propositions of the first matrix is done with the N propositions of the second matrix.
+\item{x}{A matrix of (0,1) or a boolean matrix of M rows by K columns, or a vector of length K.}
+
+\item{y}{A matrix of (0,1) or a boolean matrix of N rows by K columns or a vector of length K.}
 }
 \value{
-A table of dimension M x K x N.
+The result is a (0,1) table of dimensions (M x K) x N). In the case of vectors, the result is a (0,1) table of dimensions (1 x K) x 1)
+}
+\description{
+Function \code{inters} returns a table of the intersection between two (0,1) or boolean matrices or two vectors. The two matrices must have the same number of columns. The two vector must have the same length. This function generalizes the intersection of two subsets represented by boolean vectors to two matrices of subsets.
+}
+\examples{
+mx<-matrix(c(0,1,0,0,1,1,1,1,1),nrow=3, byrow = TRUE, dimnames = list(NULL, c("a", "b", "c")))
+ rownames(mx) <- nameRows(mx)
+my<-matrix(c(0,0,1,1,1,1),nrow=2, byrow = TRUE, dimnames = list(NULL, c("a", "b", "c")))
+ rownames(my) <- nameRows(my)
+inters(mx,my)
+b1 <- c(FALSE, TRUE, TRUE)
+b2 <- c(TRUE, TRUE, FALSE)
+names(b1) <- names(b2) <- c("c1","c2","c3")
+inters(b1,b2)
+x3<-matrix(c(1,1,0,1), ncol=2, dimnames=list(NULL, c("a","b")))
+y3<-matrix(c(0,1,1,1), ncol=2, dimnames=list(NULL, c("a","b")))
+inters(x3,y3)
+x4 <-matrix(c(1,0,1,1,1,1,1,1),nrow=2, byrow = TRUE, dimnames = list(NULL, c("a", "b", "c","d")))
+inters(x4,y4)
 }
 \author{
 Claude Boivin, Stat.ASSQ
 }
-\examples{
-## Not run: 
-x<-matrix(c(.2,.5,.3,0,0,1,1,1,1,0,1,1),nrow=3)
-y<-matrix(c(.4,.6,0,1,0,1,1,1),nrow=2)
-z<-inters(x,y)
-## End(Not run)
-}
-
